Se resaltan los registros de modelos de Stellantis